Completa las primeras páginas de la tesis y el acta

--- a/report/acta.tex
+++ b/report/acta.tex
@@ -1,6 +1,8 @@
 \documentclass[oneside,12pt,letterpaper]{report}
 
 \usepackage[pdftex]{graphicx}
+\usepackage[spanish]{babel}
+\usepackage[utf8]{inputenc}
 
 \begin{document}
 % Pagina del acta final
@@ -8,11 +10,11 @@
 \begin{center}
 
 % Upper part
-\includegraphics[scale=0.5,type=png,ext=.png,read=.png]{figures/cebolla} \\
+\includegraphics[scale=0.5,type=png,ext=.png,read=.png]{figuras/usb} \\
 
-\textsc {\large UNIVERSIDAD SIM'ON BOL'IVAR} \\
+\textsc {\large UNIVERSIDAD SIMÓN BOLÍVAR} \\
 \textsc{DECANATO DE ESTUDIOS PROFESIONALES\\
-COORDINACI'ON DE INGENIER'IA DE LA COMPUTACI'ON}
+COORDINACIÓN DE INGENIERÍA DE LA COMPUTACIÓN}
 
 \bigskip
 \bigskip
@@ -28,8 +30,8 @@ COORDINACI'ON DE INGENIER'IA DE LA COMPUTACI'ON}
 \bigskip
 
 % Aqui coloca el nombre de su proyecto de grado/pasantia larga.
-\textsc{\bfseries Detección de Dientes y Paladar
-en Fotografías Intrabucales de Vista Palatina}
+\textsc{\bfseries Reducciones automáticas de problemas de decisión en problemas de
+planificación}
 
 \bigskip
 \bigskip
@@ -40,9 +42,9 @@ en Fotografías Intrabucales de Vista Palatina}
 \centering
 Presentado por: \\
 % Aqui coloca su nombre.
-\textsc{\bfseries Kelwin Fern'andez} \\
+\textsc{\bfseries Aldo Fabrizio Porco Rametta} \\
+\textsc{\bfseries Alejandro Machado González} \\
 
-\bigskip
 \bigskip
 \bigskip
 \bigskip
@@ -55,19 +57,19 @@ Este Proyecto de Grado ha sido aprobado por el siguiente jurado examinador: \\
 % Despues de cada line coloca el (los) nombre(s) de
 % cada uno de los integrantes del jurado.
 \line(1,0){200} \\
-Carolina Chang\\
+Blai Bonet\\
 
 \bigskip
 \bigskip
 
 \line(1,0){200} \\
-Minaya Villasana\\
+Jurado 2\\
 
 \bigskip
 \bigskip
 
 \line(1,0){200} \\
-Eduardo Roa\\
+Jurado 3\\
 \end{minipage}
 
 \bigskip
@@ -75,7 +77,7 @@ Eduardo Roa\\
 \vfill
 
 % Date/Fecha
-{\large \bfseries Sartenejas, (17/07/12)}
+{\large \bfseries Sartenejas, (??/12/12)}
 
 \end{center}
 \end{titlepage}
