Agregado formato limpio de reporte

--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -178,6 +178,14 @@ Providence, RI: Amer. Math. Soc., pp. 1-17, 1997.
   isbn      = {1402006640, 9781402006647},
 }
 
+@Book{cita,
+  author    = {Ejemplo},
+  title     = {Ejemplo},
+  publisher = {A},
+  year      = {2009},
+  isbn      = {0321549430, 9780321549433}
+}
+
 @Book{angel2009,
   author    = {Angel, Edward},
   title     = {Interactive Computer Graphics, A Top-down Approach Using OpenGL \textregistered},
