Agrega índice general, estructura de la tesis

--- a/report/apendices/apendiceA.tex
+++ b/report/apendices/apendiceA.tex
@@ -1,7 +1,12 @@
 % Appendix A
 
-\chapter{Corner Detection on OpenCV}
-\label{AppendixA}
-\lhead{Appendix A. \emph{Corner Detection on OpenCV}}
+\chapter{Problemas NP modelados en lógica}
+\label{apendiceA}
+\lhead{Apéndice A. \emph{Problemas NP modelados en lógica}}
+\section{SAT}
+\section{Clique}
+\section{Camino hamiltoniano dirigido}
+\section{Matching 3-dimensional}
+\section{3-colorabilidad}
+\section{k-colorabilidad}
 
-Write your Appendix content here.
