--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -1,263 +1,9 @@
-@Article{Blum2003,
-  author    = 	 {Blum, Christian and Roli, Andrea},
-  title     = 	 {Metaheuristics in combinatorial optimization: Overview and conceptual comparison},
-  journal   = 	 {ACM Comput. Surv.},
-  volume    =    {35},
-  number    =    {3},
-  year      =    {2003},
-  issn      =    {0360-0300},
-  pages     =    {268--308},
-  doi       =    {http://doi.acm.org/10.1145/937503.937505},
-  publisher =    {ACM},
-  address   =    {New York, NY, USA},
+@Book{russell,
+  author    = {Stuart Russell and Peter Norvig},
+  title     = {Artificial Intelligence: A Modern Approach},
+  publisher = {Pearson Education},
+  year      = {2010},
+  isbn      = {978-0444527264},
+  edition   = {{T}hird}
 }
 
-@Article{Lorenco,
-  author  = {Lorenço, Helena and Martin, Olivier and Stützle, Thomas},
-  title   = {Iterated Local Search},
-  journal = {Handbook of Metaheuristics},
-  year    = {2003},
-  pages   = {321--353}
-}
-
-
-@Article{cornerDet,
-  author  = {C. Harris and M.J. Stephens},
-  title   = {A combined corner and edge detector},
-  journal = {Alvey Vision Conference},
-  year    = {1988},
-  pages   = {147-–152}
-}
-
-@Article{morp2D,
-  author  = {Wolberg, George},
-  title   = {Image morphing: a survey},
-  journal = {The Visual Computer, Volume 14, Numbers 8-9},
-  year    = {2011},
-  pages   = {360--372}
-}
-
-@Article{morp3D,
-  author  = {Lazarus, Francis and Verroust, Anne},
-  title   = {Three-dimensional metamorphosis: a survey},
-  journal = {The Visual Computer, Volume 14, Numbers 8-9},
-  year    = {2011},
-  pages   = {373--389}
-}
-
-@Article{tour,
-  author  = {Anjyo, K. and Horry, Y. and Arai, K},
-  title   = {Tour into the Picture},
-  journal = {Proc. SIGGRAPH '97 (Los Angeles, California, August 3-8, 1997). In ComputerGraphics Proceedings, Annual Conference Series, 1997. ACM SIGGRAPH},
-  year    = {1997},
-  pages   = {225--232}
-}
-
-@Article{lawler1963,
-  author    = {Lawler, Eugene},
-  title     = {The Quadratic Assignment Problem},
-  journal   = {Management Science},
-  volume    = {9},
-  number    = {4},
-  year      = {1963},
-  pages     = {586--599},
-  publisher = {INFORMS},
-}
-
-@Article{tat2008,
-  author    = {TAT Tenk Process},
-  title     = {3D User Interfaces for Mobile Phones},
-  journal   = {Mobile User Experience London},
-  year      = {2008},
-  pages     = {1-25},
-  publisher = {TAT},
-}
-
-@article{qapSA,
-  title = "Simulated annealing for the QAP -- Optimal tradeoff between simulation time and solution quality",
-  journal = "European Journal of Operational Research",
-  volume = "69",
-  number = "2",
-  pages = "238 - 243",
-  year = "1993",
-  issn = "0377-2217",
-  doi = "DOI: 10.1016/0377-2217(93)90167-L",
-  url = "http://www.sciencedirect.com/science/article/B6VCT-48NBGX1-21M/2/b899aa07c84af552f8f1fa9fc20a6a85",
-  author = "Laursen, Per S.",
-  keywords = "Simulated annealing, Combinatorial optimization, Heuristics",
-}
-
-@Book{constraint,
-  author    = {Rossi, Francesca and van Beek, Peter and Walsh, Toby},
-  title     = {Handbook of Constraint Programming (Foundations of Artificial Intelligence)},
-  publisher = {Elsevier Science},
-  year      = {2006},
-  isbn      = {978-0444527264}
-}
-
-@Book{sat,
-  author    = {Gu, Jun and Pardalos, Panos M. and Du, Ding-Zhu},
-  title     = {Satisfiability Problem: Theory and Applications},
-  publisher = {American Mathematical Society},
-  year      = {1997},
-  isbn      = {0821804790,978-0821804797}
-}
-
-Cook, S. A. and Mitchell, D. G. "Finding Hard Instances of the Satisfiability Problem: 
-A Survey." In Satisfiability Problem: Theory and Applications (Piscataway, NJ, 1996) (Ed. D. Du, J. Gu, and P. M. Pardalos). 
-Providence, RI: Amer. Math. Soc., pp. 1-17, 1997.
-
-
-@Book{Ritter,
-  author    = {Ritter, Gerhard and  Wilson, Joseph},
-  title     = {Handbook of Computer Vision Algorithms Image Algebra},
-  publisher = {CRC Press},
-  year      = {2001}
-}
-
-@Book{meta,
-  author    = {Osman, Ibrahim H. and Kelly, James P.},
-  title     = {Meta-heuristics: theory \& applications},
-  publisher = {Springer},
-  year      = {1996},
-  isbn      = {0792397002, 9780792397007}
-}
-
-
-
-@Book{Dreo,
-  author    = {Dréo, J. and Pétrowski, A. and Siarry, P. and Taillard, E.},
-  title     = {Metaheuristics for Hard Optimization},
-  publisher = {Springer},
-  year      = {2003}
-}
-
-@Book{Holger2004,
-  author    = {Hoos, Holger and Stützle, Thomas },
-  title     = {Stochastic Local Search},
-  publisher = {Morgan Kaufmann},
-  year      = {2004}
-}
-
-@Book{EL-GHAZALI,
-  author    = 	 {El-Ghazali, Talbi},
-  title     = 	 {Metaheuristics: From Design to Implementation},
-  publisher = 	 {Wiley},
-  year      = 	 {2009},
-  address   =    {New Jersey}
-}
-
-@Book{opencv,
-  author    = {Dradski, Gary and Kaehler, Adrian},
-  title     = {Learning OpenCV},
-  publisher = {O'Reilly Media, Inc.},
-  year      = {2008},
-  isbn      = {9780596516130},
-}
-
-@Book{cormen,
-  author    = {Cormen, Thomas and Leiserson, Charles and Rivest, Ronald and Stein, Clifford},
-  title     = {Introduction to algorithms},
-  publisher = {The MIT Press},
-  year      = {2001},
-  language  = {spanish},
-}
-
-@Book{hartmanis1989NP,
-  author    = {Hartmanis, Juris and American Mathematical Society},
-  title     = {Computational complexity theory},
-  publisher = {AMS Bookstore},
-  year      = {1989},
-}
-
-@Book{gutin2002TSP,
-  author    = {Gutin, Gregory and Punnen, Abraham},
-  title     = {The traveling salesman problem and its variations},
-  publisher = {Springer},
-  year      = {2002},
-  isbn      = {1402006640, 9781402006647},
-}
-
-@Book{cita,
-  author    = {Ejemplo},
-  title     = {Ejemplo},
-  publisher = {A},
-  year      = {2009},
-  isbn      = {0321549430, 9780321549433}
-}
-
-@Book{angel2009,
-  author    = {Angel, Edward},
-  title     = {Interactive Computer Graphics, A Top-down Approach Using OpenGL \textregistered},
-  publisher = {Addison Wesley},
-  year      = {2009},
-  isbn      = {0321549430, 9780321549433}
-}
-
-@Book{toth2002VRP,
-  author    = {Toth, Paolo and Vigo, Daniele},
-  title     = {The vehicle routing problem},
-  publisher = {SIAM},
-  year      = {2002},
-  isbn      = {0898715792, 9780898715798},
-}
-
-@Book{Luke2009Metahuristics,
-  author    = {Sean, Luke},
-  title     = {Essentials of Metaheuristics},
-  year      = {2009},
-  note      = {disponible en http://cs.gmu.edu/$\sim$sean/book/metaheuristics/ }
-}
-
-@Misc{obj,
-  author    = {Wavefront Technologies},
-  title     = {Object Files (.Obj)},
-  note      = {http://local.wasp.uwa.edu.au/$\sim$pbourke/dataformats/obj/ },
-  year      = {1995},
-}
-
-@Misc{mtl,
-  author    = {Wavefront Technologies},
-  title     = {Material Template Library (.mtl)},
-  note      = {http://local.wasp.uwa.edu.au/$\sim$pbourke/dataformats/mtl/ },
-  year      = {1995},
-}
-
-@Misc{wiki,
-  author = {Wikimedia Foundation},
-  title  = {Wikipedia, The Free Encyclopedia},
-  note   = {http://en.wikipedia.org/wiki/Polygon\_mesh},
-  year   = {2010},
-}
-
-@Misc{flowerImage,
-  author = {Teach English Asia},
-  title  = {Lilies and Lotus Flowers},
-  note   = {http://www.teachenglishinasia.net/asiablog/asian-water-lilies-and-lotus-flowers},
-  year   = {2008},
-}
-
-@Misc{googleMaps,
-  author = {Google Inc},
-  title  = {Google Maps},
-  note   = {http://maps.google.com/},
-  year   = {2010},
-}
-
-@Misc{sword,
-  author = {Devian Art},
-  note   = {http://www.deviantart.com/},
-  year   = {2010},
-}
-
-@Misc{benceno2d,
-  author = {Marca Propia},
-  note   = {http://www.marcapropia.net/imagesblog/benceno.gif},
-  year   = {2009},
-}
-
-@Misc{benceno3d,
-  author = {FisicaNet},
-  note   = {http://www.fisicanet.com.ar/quimica/organica/ap1/benceno01.gif},
-  year   = {2008},
-}
