Avance en introduccion

--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -1,4 +1,4 @@
-@Book{russell,
+@Book{russell:book,
   author    = {Stuart Russell and Peter Norvig},
   title     = {Artificial Intelligence: A Modern Approach},
   publisher = {Pearson Education},
@@ -7,3 +7,125 @@
   edition   = {{T}hird}
 }
 
+@InProceedings{rintanen:sat-cp10,
+  author = "J. Rintanen", 
+  title = "Heuristics for Planning with {SAT}",
+  pages = "414--428", 
+  booktitle = "Proc.\ 16th Int.\ Conf.\ on Principles and Practice of Contraint Programming",
+  editor = "D. Cohen",
+  address = "St.\ Andrews, Scotland",
+  year = "2010",
+  publisher = "Springer: {LNCS} 6308"
+}
+
+@InProceedings{rintanen:sat-ai10,
+  author = "J. Rintanen", 
+  title = "Heuristic Planning with {SAT}: Beyond Strict Depth-First Search",
+  booktitle = "Proc.\ 23rd Australasian Joint Conf.\ on Artificial Intelligence",
+  editor = "J. Li",
+  address = "Adelaide, Australia",
+  year = "2010",
+  publisher = "Springer: {LNCS} 6464"
+}
+
+@InProceedings{porco:npreductions,
+  author = "A. Porco and A. Machado and B. Bonet",
+  title = "Automatic Polytime Reductions of {NP} Problems into a Fragment of {STRIPS}",
+  booktitle = "Proc.\ 21st Int.\ Conf.\ on Automated Planning and Scheduling",
+  address = "Freiburg, Germany",
+  year = "2011",
+  publisher = "AAAI Press"
+}
+
+@InProceedings{mitchell:npsearch,
+  author = "D. Mitchell and E. Ternovska",
+  title = "A Framework for Representing and Solving NP Search Problems",
+  year = "2005",
+  booktitle = "Proc. 20th. Nat. Conf. on Artificial Intelligence",
+  address = "Pittsburgh, PA"
+}
+
+@TechReport{mcdermott:pddl,
+  author = "D. McDermott and M. Ghallab and A. Howe and C. Knoblock and A. Ram and M. Veloso and D. Weld and D. Wilkins",
+  title = "{PDDL} -- {T}he {P}lanning {D}omain {D}efinition {L}anguage",
+  institution = "Yale Center for Computational Vision and Control",
+  address = "New Haven, CT",
+  year = "1998",
+  number = "CVC TR-98-003/DCS TR-1165"
+}
+
+@InProceedings{hoffmann:ijcai07,
+  author = "J. Hoffmann and C. Gomes and B. Selman and H. A. Kautz",
+  title = "{SAT} encodings of state-space reachability problems in numeric domains",
+  pages = "1918--1923",
+  booktitle = "Proc.\ 20th Int.\ Conf.\ on Automated Planning and Scheduling",
+  editor = "M. Veloso",
+  address = "Hyderabad, India",
+  year = "2007",
+  publisher = "Morgan Kaufmann"
+}
+
+@Unpublished{fox:pddl,
+  author = "M. Fox and D. Long",
+  title = "{PDDL2.1}: {A}n extension to {PDDL} for expressing temporal planning domains",
+  year = "2001",
+  note = "See {\texttt{http://www.\-dur.\-ac.\-uk/d.p.\-long/com\-pe\-ti\-tion.\-html}}"
+}
+
+@Article{fagin:spectra,
+  author = "R. Fagin",
+  title = "Generalized first-order spectra and polynomial-time recognizable sets",
+  journal = "American Mathematical Society",
+  volume = "7",
+  pages = "27--41",
+  year = "1974",
+}
+
+@InProceedings{cadoli:npspec,
+  author = "M. Cadoli and L. Palopoli and A. Schaerf and D. Vasile",
+  title = "{NP-SPEC}: An Executable Specification Language for Solving All Problems in {NP}.",
+  booktitle = "Proc. 1st. Int. Work- shop on Practical Aspects of Declarative Languages",
+  address = "San Antonio, TX",
+  year = "1999"
+}
+
+@Article{cadoli:safedelay,
+  author = "M. Cadoli and T. Mancini",
+  title = "Automated reformulation of specifications by safe delay of constraints",
+  journal = jair,
+  volume = "170",
+  year = "2006"
+}
+
+@Book{bollobas:random-graphs,
+  author = "B. Bollob\'as",
+  title = "Random Graphs",
+  edition = "Second",
+  year = "2001",
+  publisher = "Cambridge University Press"
+}
+
+@Book{sipser:book,
+  author = "M. Sipser",
+  title = "Introduction to Theory of Computation, 2nd Edition",
+  year = "2005",
+  address = "Boston, MA",
+  publisher = "Thomson Course Technology"
+}
+
+@Book{immerman:book,
+  title = "Descriptive Complexity",
+  author = "N. Immerman",
+  publisher = "Springer",
+  year = "1998"
+}
+
+@Article{bylander:plan-complexity,
+  author = "T. Bylander",
+  title = "The Computational Complexity of Propositional {STRIPS} Planning",
+  pages = "165--204",
+  volume = "69",
+  year = "1994",
+  journal = aij,
+  publisher = "Elsevier"
+}
