--- a/report/capitulos/capitulo1.tex
+++ b/report/capitulos/capitulo1.tex
@@ -14,6 +14,6 @@
 \subsubsection{Orden y aritmética}
 \subsection{Semántica formal}
 \subsection{Clases de complejidad}
-\subsubsection{Equivalencias con complejidad en planificación automática}
+%\subsubsection{Equivalencias con complejidad en planificación automática}
 
 \section{Trabajos previos}
