--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -17,7 +17,7 @@
 \usepackage{epigraph}
 \usepackage{natbib}
 \usepackage[utf8]{inputenc}
-\usepackage{babelbib} % Bibliografia en español
+\usepackage[fixlanguage]{babelbib}
 %\usepackage[letterpaper, inner=3cm, outer=2cm]{geometry}
 %\addtolength[\topmargin]{-1.5cm}
 %\addtolength[\textheight]{4cm}
@@ -110,7 +110,8 @@ Ingeniero de Computación}
 \addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
 Aquí va el resumen.
 
-\noindent \textbf{Palabras clave}: ???
+\noindent \textbf{Palabras clave}: Planificación Automática, Teoría de
+Complejidad, Inteligencia Artificial.
 
 \clearpage % Abstract ended, start a new page
 %% ----------------------------------------------------------------
